# poolnoodle

./: .gitignore  Makefile  notes  pyproject.toml
poolnoodle/: __init__.py  arbitrage.py  buy.py  coin.py  curve.py  pool.py  uniswap.py  usdc.py  util.py
sol/contracts/: twostep.sol
sol/contracts/interfaces/: ICurvePair.sol
