[tool.poetry]
name = "poolnoodle"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10.6"
secp256k1 = "^0.14.0"
#bitcoin = "^1.1.42"
web3 = "^6.2.0"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
